src/objects/Clinical_Note_Instance__c.object
<CustomObject>
    <description>One record for each instance of clinical notes for a given Patient POT Apt.  This table will serve as the main tracker of a unique instance,  referenced by the standard forms table and the clinical notes selected</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Note Instances</relationshipLabel>
        <relationshipName>Clinical_Note_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apt_Note__c</fullName>
        <label>Apt Note</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Clinical Note Instances</relationshipLabel>
        <relationshipName>Clinical_Note_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_POT_Apt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT Apt</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Clinical Note Instances</relationshipLabel>
        <relationshipName>Clinical_Note_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Time__c</fullName>
        <label>Review Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clinical_Note_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clinical Note Instance</label>
    <nameField>
        <displayFormat>CNI-{0000}</displayFormat>
        <label>Clinical Note Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Note Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>